--- a/BeachHouse.UI/Components/App.razor
+++ b/BeachHouse.UI/Components/App.razor
@@ -15,6 +15,10 @@
 <body>
     <Routes @rendermode="InteractiveServer" />
     <script src="_framework/blazor.web.js"></script>
+    <script src="bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="js/fileUtils.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="js/chartUtils.js"></script>
 </body>
 
 </html>
