--- a/BeachHouse.UI/Components/Layout/NavMenu.razor
+++ b/BeachHouse.UI/Components/Layout/NavMenu.razor
@@ -30,6 +30,12 @@
             </NavLink>
         </div>
 
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="analysis">
+                <span class="bi bi-graph-up-arrow-nav-menu" aria-hidden="true"></span> Analysis
+            </NavLink>
+        </div>
+
          <div class="nav-item px-3">
             <NavLink class="nav-link" href="datamanager">
                 <span class="bi bi-database-fill-down-nav-menu" aria-hidden="true"></span> Data Manager
